--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset = "UTF-8">
-    <title>Kuzmenko</title>
+    <title>GRIGoREV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -193,6 +193,30 @@
         
     </main>
 
+ <div class="container mt-4 mainBorder order-3 order-sm-3 order-md3 py-md-5 px-md-5 text-center">
+      <h2 class="col text-center">Калькулятор</h2>
+      <form class="calc">
+        <div class="form-row"> 
+          <div class="col-md-2"></div>
+          <div class=" col-sm-12 col-md-4 mt-sm-3 mt-md-auto">
+          <label class="mt-3" id="inputPrice" >Цена</label>
+          <input class="form-control" onkeyup="checkParams()" id="price" type="text" name="field-name" placeholder="Введите цену товара:" autocomplete="off" >
+          </div>
+          <div class="col-sm-12 col-md-4 ">
+          <label class="mt-3" id="inputCount" >Количество</label>
+          <input class="form-control" onkeyup="checkParams()" id="n" type="text" name="field-name" placeholder="Введите кол-во товаров:" autocomplete="off" >
+          </div>
+        </div>
+        <div class="container col-9 mt-4">
+          <button class="form-control btn active" type="button" id="submit" onclick="calc()" >Посчитать</button>
+          <div class="container row mt-2"> 
+            <div class="col-5"></div>
+            <h2 class="resultCalc">Результат: </h2>
+            <h2 class="resultCalc" id="result"> 0</h2>
+          </div>
+        </div>
+       </form> 
+      </div>
 
     <footer>
     <div class="container-fluid mt-3">
@@ -206,6 +230,6 @@
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="calc.js"></script>
+    <script src="calc2.js"></script>
 </body>
 </html>
